--- a/n-pass/pass3.adoc
+++ b/n-pass/pass3.adoc
@@ -31,15 +31,121 @@ version to set for the image.
 - [ ] Create module that can log messages
 - [ ] Create Makefile target to run pass3
 - [ ] Have elixir release periodically sends log messages when it runs
+- [ ] Set locale to utf-8 in dev container
 
 == Status
-- Effort spent: 0h
-- Effort left: 0h
+- Effort spent: 1.75h
+- Effort left: 4h
 - Initial estimate: 5h
 
 == Log
 
-=== Saturday, 02/28/2015
+=== Tuesday, 03/03/2015
 
 ----
+
+** 19:22 How to build an empty elixir release?
+Where should we put this? This should go under the src
+subdirectory. Building the docker image should build the release out
+of the source directory and copy it into the image.
+
+So, what should this be named? Perhaps this should go under the n-pass
+directory in a subdirectory named pass3? Yes, I think this is
+best. The src directory should be reserved for the real sources of
+spreadsheetkit.com.
+
+** 19:30 >> Build an empty elixir release
+Let's look into exrm. I'll follow along with their documentation. I
+think the first thing we need to do is use mix.
+
+** 19:32 (2 min) Try "mix new pass3"
+Alright, I did this from the n-pass directory. Let's continue with
+exrm.
+
+** 19:35 (5 min) Update deps to add exrm
+Did this. Now will do "mix deps.get", "mix deps.compile". From there I
+should be able to do a "mix release".
+
+** 19:36 (6 min) Built a release!
+Alright, it looks like I built a release. Now what? Let's try running
+it using "rel/pass3/bin/pass3 console"...Looks good!
+
+** 19:39 (9 min) Should we use the "foreground" option?
+I think from runit's perspective, running this in the foreground is
+what it would want to do.
+
+** 19:40 (10 min) Deploying?
+Looks like there's a tar file that can be used to deploy the release.
+
+** 19:41 (11 min) Done
+I think we're done building an empty release. That was pretty
+easy. Let's check in and then see if we can set up logging. We should
+run this in a dev container via dev-run I think?
+
+** 19:45 << (15 min) Checked in
+
+** 19:46 Take a break
+Let's take a little break and then see if we can log something from
+the console.
+
+
+** 19:57 >> Try logging from elixir
+Let's fire up our console and try logging something. We should do this
+from within dev-run.
+
+** 20:07 (10 min) Need GLIBC 2.14
+Alright, let's add this to the dev Dockerfile:
+
+sudo apt-get install libc6-dev
+
+** 20:17 (20 min) Got libc installed
+I followed this post:
+http://stackoverflow.com/questions/10863613/how-to-upgrade-glibc-from-version-2-13-to-2-15-on-debian
+
+** 20:18 (21 min) Able to run release now
+Alright, I can run the release, but I'm getting a pesky locale
+error. Let's add this to the list of things I need to do.
+
+** 20:19 (22 min) Let's try logging real quick
+
+** 20:20 << (23 min) Looks like I need to have logger included first
+Let's figure this out after a break.
+
+** 20:21 Take a break
+After a break, I'll try getting the elixir logger working with the
+syslog backend. I'll follow along here:
+https://github.com/smpallen99/syslog
+
+** 20:30 >> Set up logging to syslog
+First, we need to update the configuration. Next, we need to specify
+the application.
+
+** 20:46 (16 min) Got logger running
+Need to add remote logging to syslog by passing in "-r" switch.
+
+** 20:51 << (21 min) Stop
+
+** 20:51 Let's take a break
+After a break, I'll create a syslog-ng version for the dev image. This
+will include the "-r" switch to syslog.
+
+** 21:38 >> Add the "-r" flag to syslog-ng
+Let's create the script and load it in the dev image.
+
+** 21:48 (10 min) Couldn't add the -r flag
+The syslog-ng app doesn't take it. I think we might be able to
+configure a network source.
+
+** 22:09 (31 min) Not able to use Logger yet, but messages come across
+It seems that when the console starts, we get a message. Let's change
+the appid and see if that changes. No, it was the host.
+
+So it seems to be doing something.
+
+** 22:25 (47 min) Still not able to get messages across
+
+** 22:33 <<(55 min) Still not working
+Aargh. This still isn't working. I think I'll try exlager tomorrow.
+
+
 ----
